Z-index fix

--- a/css/story.css
+++ b/css/story.css
@@ -179,6 +179,7 @@ html {
 /* Story Navigation Sidebar */
 #story-nav-menu {
     position: fixed;
+    z-index: 1100;
     top: 100px;
     left: 20px;
     width: 250px;
